import java.time.ZonedDateTime
import java.time.format.DateTimeFormatter

plugins {
    id 'java'
    id 'application'
    id 'net.nemerosa.versioning' version '3.1.0'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'maven-publish'
}

group = 'dev.JustRed23'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'dev.JustRed23.grandfather.App'
}

def applicationPropertiesFile = layout.projectDirectory.file('src/main/resources/application.properties')

tasks.register('updateVersionMetadata') {
    outputs.file(applicationPropertiesFile)
    outputs.upToDateWhen { false }
    doLast {
        ant.propertyfile(file: applicationPropertiesFile.asFile) {
            entry(key: 'version', value: versioning.info.build)
            entry(key: 'buildTime', value: DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(ZonedDateTime.now()))
        }
    }
}

tasks.named('processResources') {
    dependsOn(tasks.named('updateVersionMetadata'))
}

repositories {
    mavenCentral()
    maven { url = uri('https://jitpack.io') }
    maven { url = uri('https://maven.lavalink.dev/releases') }
}

dependencies {
    //Engine
    implementation(libs.stonebrick)

    //JDA
    implementation(libs.jda)
    implementation(libs.jda.utilities)

    //Logging
    implementation(libs.logback.classic)
}

tasks.named('shadowJar') {
    archiveFileName = 'Grandfather.jar'
    manifest {
        attributes('Implementation-Title': project.name, 'Implementation-Version': versioning.info.build)
    }

    // Prevent gradle from crashing and burning
    dependsOn(tasks.named('distTar'), tasks.named('distZip'))
}
